--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,7 @@ MarkupSafe==2.1.2
 marshmallow==3.19.0
 packaging==23.0
 psycopg2-binary==2.9.5
+python-dotenv==1.0.0
 pytz==2023.3
 six==1.16.0
 SQLAlchemy==2.0.8
