--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,23 +1,35 @@
 alembic==1.10.2
 aniso8601==9.0.1
+attrs==22.2.0
 click==8.1.3
 colorama==0.4.6
+exceptiongroup==1.1.1
+factory-boy==3.2.1
+Faker==18.4.0
 Flask==2.2.3
 Flask-Cors==3.0.10
+Flask-HTTPAuth==4.7.0
 Flask-Migrate==4.0.4
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==3.0.3
+Flask-Testing==0.8.1
 greenlet==2.0.2
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.2
 marshmallow==3.19.0
 packaging==23.0
+pluggy==1.0.0
 psycopg2-binary==2.9.5
-python-dotenv==1.0.0
+PyJWT==2.6.0
+pytest==7.2.2
+python-dateutil==2.8.2
+python-decouple==3.8
 pytz==2023.3
 six==1.16.0
 SQLAlchemy==2.0.8
+tomli==2.0.1
 typing_extensions==4.5.0
 Werkzeug==2.2.3
